ash/host/ash_window_tree_host_platform.h
@@ -27,6 +27,7 @@ struct PlatformWindowInitProperties;
 }
 
 namespace ash {
+class ExtendedMouseWarpControllerTest;
 
 class ASH_EXPORT AshWindowTreeHostPlatform
     : public AshWindowTreeHost,
@@ -40,6 +41,10 @@ class ASH_EXPORT AshWindowTreeHostPlatform
   ~AshWindowTreeHostPlatform() override;
 
  protected:
+  friend ExtendedMouseWarpControllerTest;
+  FRIEND_TEST_ALL_PREFIXES(ExtendedMouseWarpControllerTest,
+                           CheckHostPointToScreenInMouseWarpRegion);
+
   AshWindowTreeHostPlatform();
 
   // AshWindowTreeHost:
